@@ -3,6 +3,10 @@
 
   18 Sep 2007; Roy Marples <uberlord@gentoo.org>:
 
+    API change! rc_ls_dir, rc_get_config and rc_get_list no longer take
+    a starting list as a first argument. Instead, use rc_strlist_join
+    to append or prepend the new list to an existing list.
+
     API change! rc_strlist_add and friends now take char *** instead of
     char ** and return a pointer to the item added instead of the new
     list head. This is so we can easily tell if the item was successfully
